syntax = "proto3";

package user;


message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;

}



message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message SearchUsersRequest {
  string query = 1;
}

message SearchUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string user_id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message CreateUserResponse {
  User user = 1;
}
message UpdateUserRequest {
  string user_id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
